adds getMotionsForParty
