# wdip-fe/src/service/wdip-be/models/index.ts
@@ -1,5 +1,9 @@
 export * from './ErrorModel';
+export * from './Motion';
+export * from './Motions';
 export * from './MotionsByParty';
 export * from './MotionsByPartyResults';
 export * from './Party';
+export * from './Proposal';
+export * from './Stakeholder';
 export * from './Word';
